styling, jump between pages, bug fixes

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,6 @@
+body{
+  background-color: #dcf3e2;
+}
 .label-overrides{
   display: flex;
 }
@@ -5,8 +8,62 @@
   margin-bottom:30px;
 }
 #form-container{
-  margin-bottom:30px;
+  margin-bottom:100px;
+}
+form{
+  padding-top:20px;
+  border-top: 1px solid #AFAFAF;
+  padding-bottom:20px;
+}
+.container-fluid{
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.btn{
+  width:100px;
+  background-color:#AAA;
+  margin-left:5px;
+  margin-right:5px;
+}
+.btn-primary{
+  margin-left:0px;
+}
+#button-container{
+  margin-top: 20px;
+  padding:8px;
+  background-color: #EEE;
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid #BBB;
+  border-radius: 4px;
 }
 textarea{
   min-height:150px;
+}
+label{
+  margin-top:10px;
+  margin-left:-3px;
+}
+input{
+  margin-top:2px;
+  margin-bottom:2px;
+}
+#footer{
+  display: flex;
+  justify-content: space-around;
+  postion: absolute;
+  bottom: 0px;
+  position:fixed;
+  width:100%;
+  padding:10px;
+  background-color: #333;
+  border-top: 1px solid black;
+}
+#select-active-form{
+  max-width: 400px;
+}
+.page-btn{
+  width:50px;
+  background-color:black;
+  color:white;
 }
